Specify bucket when accessing storage routes
